--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,32 @@
 <html lang='en'>
     <head>
         <meta charset='UTF-8' />
-        <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Mobile Banking App</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+        <meta name='theme-color' content='#1E3A8A' />
+        <meta name='mobile-web-app-capable' content='yes' />
+        <meta name='apple-mobile-web-app-capable' content='yes' />
+        <meta name='apple-mobile-web-app-status-bar-style' content='black-translucent' />
+        <meta name='apple-mobile-web-app-title' content='NURPAY' />
+        <link rel='manifest' href='/manifest.json' />
+        <link rel='apple-touch-icon' href='/assets/generated/nurpay-icon-192.dim_192x192.png' />
+        <title>BDT NURPAY WALLET</title>
     </head>
     <body>
         <div id='root'></div>
         <script type='module' src='/src/main.tsx'></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function () {
+                    navigator.serviceWorker.register('/sw.js').then(
+                        function (registration) {
+                            console.log('SW registered:', registration.scope);
+                        },
+                        function (err) {
+                            console.log('SW registration failed:', err);
+                        }
+                    );
+                });
+            }
+        </script>
     </body>
 </html>
